src/main/java/org/example/rippleback/core/error/exceptions/post/PostNotPublishedException.java
package org.example.rippleback.core.error.exceptions.post;

public class PostNotPublishedException extends RuntimeException {
    public PostNotPublishedException(String message) {
        super(message);
    }
}
